api-miketrout-dev-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-miketrout-dev-deployment
  labels:
    service: api-miketrout-dev
    tier: backend
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      service: api-miketrout-dev
      tier: backend
  template:
    metadata:
      labels:
        service: api-miketrout-dev
        tier: backend
    spec:
      containers:
        - name: api-miketrout-dev
          image: miketrout/api.miketrout.dev
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              memory: 10Mi
              cpu: 10m
            limits:
              memory: 50Mi
              cpu: 50m
          ports:
            - name: http
              containerPort: 80
