ambassador-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    servie: ambassador
  name: ambassador
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: ambassador
      port: 8080
      targetPort: 8080
  selector:
    service: ambassador
