api-miketrout-dev-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-miketrout-dev-service
spec:
  type: NodePort
  selector:
    service: api-miketrout-dev
    tier: backend
  ports:
    - name: http
      protocol: TCP
      port: 50004
      targetPort: http
